mongo-db/front-avis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-avis
spec:
  selector:
    matchLabels:
      app: front-avis
  template:
    metadata:
      labels:
        app: front-avis
    spec:
      containers:
      - name: front-avis
        image: chanou41/tp-mern:front10
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
