mongo-db/ms-avis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-avis
spec:
  selector:
    matchLabels:
      app: ms-avis
  template:
    metadata:
      labels:
        app: ms-avis
    spec:
      containers:
      - name: ms-avis
        image: chanou41/tp-mern:back
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: ms-avis
  ports:
  - port: 8000
    targetPort: 8000
